--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-navigation/native-stack": "^7.9.1",
     "expo": "~54.0.31",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
